<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hxm_white"
    android:orientation="vertical">

    <huaxiaomi.pulan.com.widget.TitlebarLayout
        android:id="@+id/titlebar"
        app:TitlebarLayout_title="@string/hxm_app_name"
        app:TitlebarLayout_showMore="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:background="@color/hxm_colorPrimary"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/search_layout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/hxm_padding_normal"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            
            <ImageView
                android:src="@mipmap/hxm_search"
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/hxm_menu_daily_check"
                android:textColor="@color/hxm_white"
                android:layout_marginTop="@dimen/hxm_margin_normal"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/setting_layout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/hxm_padding_normal"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@mipmap/hxm_settings"
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/hxm_menu_setting"
                android:textColor="@color/hxm_white"
                android:layout_marginTop="@dimen/hxm_margin_normal"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/skill_layout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/hxm_padding_normal"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@mipmap/hxm_skill"
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/hxm_menu_skill"
                android:textColor="@color/hxm_white"
                android:layout_marginTop="@dimen/hxm_margin_normal"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <com.scwang.smartrefresh.layout.SmartRefreshLayout
            android:id="@+id/srl"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.RecyclerView
                android:background="@color/hxm_colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rv" />
        </com.scwang.smartrefresh.layout.SmartRefreshLayout>

        <huaxiaomi.pulan.com.widget.RobotButton
            android:id="@+id/robot_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_width="70dp"
            android:layout_height="70dp"/>

        <huaxiaomi.pulan.com.widget.RecordView
            android:id="@+id/record_view"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</LinearLayout>